Ajout du rendu UML

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ appli/build
 appli/bin
 appli/.vscode
 base-de-donnees/Pubert_Esnault_DaRocha_Leborgne_1B1/*
+base-de-donnees/Pubert_Esnault_DaRocha_Leborgne_1B1.zip
